--- a/composer.json
+++ b/composer.json
@@ -10,284 +10,20 @@
         },
         "Pantheon Upstream": {
             "type": "path",
-            "url": "upstream-configuration"
-        },
-        "codemirror": {
-            "type": "package",
-            "package": {
-                "name": "codemirror/codemirror",
-                "version": "5.65.3",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "codemirror"
-                },
-                "dist": {
-                    "url": "https://github.com/components/codemirror/archive/refs/tags/5.65.3.zip",
-                    "type": "zip"
-                },
-                "license": "MIT"
-            }
-        },
-        "jquery.inputmask": {
-            "type": "package",
-            "package": {
-                "name": "jquery/inputmask",
-                "version": "5.0.7",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "jquery.inputmask"
-                },
-                "dist": {
-                    "url": "https://github.com/RobinHerbots/jquery.inputmask/archive/refs/tags/5.0.7.zip",
-                    "type": "zip"
-                },
-                "license": "MIT"
-            }
-        },
-        "jquery.intl-tel-input": {
-            "type": "package",
-            "package": {
-                "name": "jquery/intl-tel-input",
-                "version": "17.0.19",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "jquery.intl-tel-input"
-                },
-                "dist": {
-                    "url": "https://github.com/jackocnr/intl-tel-input/archive/refs/tags/v17.0.19.zip",
-                    "type": "zip"
-                },
-                "license": "MIT"
-            }
-        },
-        "jquery.rateit": {
-            "type": "package",
-            "package": {
-                "name": "jquery/rateit",
-                "version": "1.1.5",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "jquery.rateit"
-                },
-                "dist": {
-                    "url": "https://github.com/gjunge/rateit.js/archive/refs/tags/1.1.5.zip",
-                    "type": "zip"
-                },
-                "license": "MIT"
-            }
-        },
-        "jquery.select2": {
-            "type": "package",
-            "package": {
-                "name": "jquery/select2",
-                "version": "4.0.13",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "jquery.select2"
-                },
-                "dist": {
-                    "url": "https://github.com/select2/select2/archive/refs/tags/4.0.13.zip",
-                    "type": "zip"
-                },
-                "license": "MIT"
-            }
-        },
-        "jquery.textcounter": {
-            "type": "package",
-            "package": {
-                "name": "jquery/textcounter",
-                "version": "0.9.0",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "jquery.textcounter"
-                },
-                "dist": {
-                    "url": "https://github.com/ractoon/jQuery-Text-Counter/archive/refs/tags/0.9.0.zip",
-                    "type": "zip"
-                },
-                "license": "MIT"
-            }
-        },
-        "jquery.timepicker": {
-            "type": "package",
-            "package": {
-                "name": "jquery/timepicker",
-                "version": "1.14.0",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "jquery.timepicker"
-                },
-                "dist": {
-                    "url": "https://github.com/jonthornton/jquery-timepicker/archive/refs/tags/1.14.0.zip",
-                    "type": "zip"
-                },
-                "license": "MIT"
-            }
-        },
-        "popperjs": {
-            "type": "package",
-            "package": {
-                "name": "popperjs/popperjs",
-                "version": "2.11.6",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "popperjs"
-                },
-                "dist": {
-                    "url": "https://registry.npmjs.org/@popperjs/core/-/core-2.11.6.tgz",
-                    "type": "tar"
-                },
-                "license": "MIT"
-            }
-        },
-        "progress-tracker": {
-            "type": "package",
-            "package": {
-                "name": "progress-tracker/progress-tracker",
-                "version": "2.0.7",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "progress-tracker"
-                },
-                "dist": {
-                    "url": "https://github.com/NigelOToole/progress-tracker/archive/refs/tags/2.0.7.zip",
-                    "type": "zip"
-                },
-                "license": "MIT"
-            }
-        },
-        "signature_pad": {
-            "type": "package",
-            "package": {
-                "name": "signature_pad/signature_pad",
-                "version": "2.3.0",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "signature_pad"
-                },
-                "dist": {
-                    "url": "https://github.com/szimek/signature_pad/archive/refs/tags/v2.3.0.zip",
-                    "type": "zip"
-                },
-                "license": "MIT"
-            }
-        },
-        "tabby": {
-            "type": "package",
-            "package": {
-                "name": "tabby/tabby",
-                "version": "12.0.3",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "tabby"
-                },
-                "dist": {
-                    "url": "https://github.com/cferdinandi/tabby/archive/refs/tags/v12.0.3.zip",
-                    "type": "zip"
-                },
-                "license": "MIT"
-            }
-        },
-        "tippyjs": {
-            "type": "package",
-            "package": {
-                "name": "tippyjs/tippyjs",
-                "version": "6.3.7",
-                "type": "drupal-library",
-                "extra": {
-                    "installer-name": "tippyjs"
-                },
-                "dist": {
-                    "url": "https://registry.npmjs.org/tippy.js/-/tippy.js-6.3.7.tgz",
-                    "type": "tar"
-                },
-                "license": "MIT"
-            }
+            "url": "upstream-configuration/locked"
         }
     },
     "require": {
-        "codemirror/codemirror": "*",
-        "composer/installers": "^2.1",
-        "cu-boulder/boulder_base": "dev-main",
-        "cu-boulder/boulder_profile": "dev-main",
-        "cu-boulder/express_admin": "dev-main",
-        "cu-boulder/ucb_admin_menus": "dev-main",
-        "cu-boulder/ucb_article_author": "dev-main",
-        "cu-boulder/ucb_bootstrap_layouts": "dev-main",
-        "cu-boulder/ucb_campus_news": "dev-main",
-        "cu-boulder/ucb_ckeditor_plugins": "dev-main",
-        "cu-boulder/ucb_custom_entities": "dev-main",
-        "cu-boulder/ucb_default_content": "dev-main",
-        "cu-boulder/ucb_focal_image_enable": "dev-main",
-        "cu-boulder/ucb_migration_shortcodes": "dev-main",
-        "cu-boulder/ucb_person_title": "dev-main",
-        "cu-boulder/ucb_site_configuration": "dev-main",
-        "cu-boulder/ucb_third_party_libraries": "dev-main",
-        "cu-boulder/ucb_user_invite": "dev-main",
+        "pantheon-upstreams/upstream-configuration": "dev-main",
+        "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
-        "drupal/admin_toolbar": "^3.4",
-        "drupal/administerusersbyrole": "^3.4",
-        "drupal/aggregator": "^2.0",
-        "drupal/antibot": "^2.0",
-        "drupal/better_social_sharing_buttons": "^4.0",
-        "drupal/ckeditor5_icons": "1.x-dev@dev",
-        "drupal/ckeditor5_paste_filter": "^1.0",
-        "drupal/consumer_image_styles": "^4.0",
-        "drupal/core-composer-scaffold": "~10.2.0",
-        "drupal/core-project-message": "~10.2.0",
-        "drupal/core-recommended": "~10.2.0",
-        "drupal/devel": "^5.0",
-        "drupal/entity_embed": "^1.1",
-        "drupal/externalauth": "^2.0",
-        "drupal/features": "^3.13",
-        "drupal/field_group": "^3.1",
-        "drupal/focal_point": "^2.0",
-        "drupal/google_cse": "^4.0@alpha",
-        "drupal/google_tag": "^2.0",
-        "drupal/layout_builder_iframe_modal": "^1.3",
-	"drupal/linkit": "^6.1",
-        "drupal/media_alias_display": "^2.0",
-        "drupal/media_entity_file_replace": "^1.1",
-        "drupal/media_file_delete": "^1.3",
-        "drupal/media_library_form_element": "^2.0",
-        "drupal/menu_block": "^1.10",
-        "drupal/menu_firstchild": "^2.1",
-        "drupal/metatag": "^2.0",
-        "drupal/migrate_plus": "^6.0",
-        "drupal/migrate_tools": "^6.0",
-        "drupal/pantheon_advanced_page_cache": "^2.0",
-        "drupal/paragraphs": "^1.14",
-        "drupal/pathauto": "^1.8",
-        "drupal/redirect": "^1.8",
-        "drupal/responsive_preview": "^2.1",
-        "drupal/scheduler": "^2.0",
-        "drupal/shortcode": "^2.0",
-        "drupal/simple_sitemap": "^4.1",
-        "drupal/simplesamlphp_auth": "^4.0",
-        "drupal/smtp": "^1.0",
-        "drupal/twig_tweak": "^3.1",
-        "drupal/webform": "^6.2",
-        "drush/drush": "^12.1",
-        "jquery/inputmask": "*",
-        "jquery/intl-tel-input": "*",
-        "jquery/rateit": "*",
-        "jquery/select2": "*",
-        "jquery/textcounter": "*",
-        "jquery/timepicker": "*",
-        "pantheon-systems/drupal-integrations": "^10",
-        "pantheon-upstreams/upstream-configuration": "^1",
-        "popperjs/popperjs": "*",
-        "progress-tracker/progress-tracker": "*",
-        "signature_pad/signature_pad": "*",
-        "simplesamlphp/simplesamlphp": "^2.1",
-        "tabby/tabby": "*",
-        "tippyjs/tippyjs": "*"
+        "drush/drush": "^12"
     },
     "require-dev": {
-        "drupal/core-dev": "^10.1"
+        "drupal/core-dev": "~10.2.0"
     },
     "conflict": {
-            "drupal/drupal": "*"
+        "drupal/drupal": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -296,9 +32,7 @@
             "locations": {
                 "web-root": "./web"
             },
-            "allowed-packages": [
-                "pantheon-systems/drupal-integrations"
-            ],
+            "allowed-packages": ["pantheon-systems/drupal-integrations"],
             "file-mapping": {
                 "[project-root]/.editorconfig": false,
                 "[project-root]/pantheon.upstream.yml": false,
@@ -326,21 +60,16 @@
             "web/private/scripts/quicksilver/{$name}/": ["type:quicksilver-script"]
         },
         "merge-plugin": {
-            "include": [
-                "composer.libraries.json"
-            ]
+            "include": ["composer.libraries.json"]
         },
         "composer-exit-on-patch-failure": true,
-        "enable-patching": true,
-        "patchLevel": {
-            "drupal/core": "-p2"
-        }
+        "enable-patching": true
     },
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
         "platform": {
-            "php": "8.1"
+            "php": "8.2"
         },
         "allow-plugins": {
             "composer/installers": true,
@@ -351,25 +80,26 @@
             "wikimedia/composer-merge-plugin": true,
             "phpstan/extension-installer": true,
             "drupal/core-project-message": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "pantheon-systems/upstream-management": true
         }
     },
     "scripts": {
         "post-update-cmd": [
-          "rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
-          "rm -rf vendor/simplesamlphp/simplesamlphp/config",
-          "rm -rf vendor/simplesamlphp/simplesamlphp/cert",
-          "ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
-          "ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
-          "ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
+            "rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
+            "rm -rf vendor/simplesamlphp/simplesamlphp/config",
+            "rm -rf vendor/simplesamlphp/simplesamlphp/cert",
+            "ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
+            "ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
+            "ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
         ],
         "post-install-cmd": [
-          "rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
-          "rm -rf vendor/simplesamlphp/simplesamlphp/config",
-          "rm -rf vendor/simplesamlphp/simplesamlphp/cert",
-          "ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
-          "ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
-          "ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
+            "rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
+            "rm -rf vendor/simplesamlphp/simplesamlphp/config",
+            "rm -rf vendor/simplesamlphp/simplesamlphp/cert",
+            "ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
+            "ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
+            "ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
         ]
     }
 }
