--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -201,7 +201,7 @@
     ],
     "require": {
         "codemirror/codemirror": "*",
-        "composer/installers": "^2.1",
+        "composer/installers": "v2.2.0",
         "cu-boulder/boulder_base": "dev-main",
         "cu-boulder/boulder_profile": "dev-main",
         "cu-boulder/express_admin": "dev-main",
@@ -218,66 +218,179 @@
         "cu-boulder/ucb_site_configuration": "dev-main",
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
-        "cweagans/composer-patches": "^1.7",
-        "drupal/admin_toolbar": "^3.4",
-        "drupal/administerusersbyrole": "^3.4",
-        "drupal/aggregator": "^2.0",
-        "drupal/antibot": "^2.0",
-        "drupal/better_social_sharing_buttons": "^4.0",
-        "drupal/ckeditor5_icons": "1.x-dev@dev",
-        "drupal/ckeditor5_paste_filter": "^1.0",
-        "drupal/consumer_image_styles": "^4.0",
-        "drupal/core-composer-scaffold": "~10.2.0",
-        "drupal/core-project-message": "~10.2.0",
-        "drupal/core-recommended": "~10.2.0",
-        "drupal/devel": "^5.0",
-        "drupal/entity_embed": "^1.1",
-        "drupal/externalauth": "^2.0",
-        "drupal/features": "^3.14",
-        "drupal/field_group": "^3.1",
-        "drupal/focal_point": "^2.0",
-        "drupal/google_cse": "^4.0@alpha",
-        "drupal/google_tag": "^2.0",
-        "drupal/layout_builder_iframe_modal": "^1.3",
-        "drupal/linkit": "^6.1",
-        "drupal/media_alias_display": "^2.0",
-        "drupal/media_entity_file_replace": "^1.1",
-        "drupal/media_file_delete": "^1.3",
-        "drupal/media_library_form_element": "^2.0",
-        "drupal/menu_block": "^1.10",
-        "drupal/menu_firstchild": "^2.1",
-        "drupal/metatag": "^2.0",
-        "drupal/migrate_plus": "^6.0",
-        "drupal/migrate_tools": "^6.0",
-        "drupal/pantheon_advanced_page_cache": "^2.0",
-        "drupal/paragraphs": "^1.14",
-        "drupal/pathauto": "^1.8",
-        "drupal/redirect": "^1.8",
-        "drupal/responsive_preview": "^2.1",
-        "drupal/scheduler": "^2.0",
-        "drupal/shortcode": "^2.0",
-        "drupal/simple_sitemap": "^4.1",
-        "drupal/simplesamlphp_auth": "^4.0",
-        "drupal/smtp": "^1.0",
-        "drupal/twig_tweak": "^3.1",
-        "drupal/webform": "^6.2",
-        "drush/drush": "^12.1",
+        "cweagans/composer-patches": "1.7.3",
+        "drupal/admin_toolbar": "3.4.2",
+        "drupal/administerusersbyrole": "3.4.0",
+        "drupal/aggregator": "2.2.0",
+        "drupal/antibot": "2.0.3",
+        "drupal/better_social_sharing_buttons": "4.0.7",
+        "drupal/ckeditor5_icons": "dev-1.x",
+        "drupal/ckeditor5_paste_filter": "1.0.1",
+        "drupal/consumer_image_styles": "4.0.8",
+        "drupal/core-composer-scaffold": "10.2.5",
+        "drupal/core-project-message": "10.2.5",
+        "drupal/core-recommended": "10.2.5",
+        "drupal/devel": "5.2.1",
+        "drupal/entity_embed": "1.6.0",
+        "drupal/externalauth": "2.0.5",
+        "drupal/features": "3.14.0",
+        "drupal/field_group": "3.4.0",
+        "drupal/focal_point": "2.0.3",
+        "drupal/google_cse": "4.0.0",
+        "drupal/google_tag": "2.0.4",
+        "drupal/layout_builder_iframe_modal": "1.3.0",
+        "drupal/linkit": "6.1.3",
+        "drupal/media_alias_display": "2.0.1",
+        "drupal/media_entity_file_replace": "1.2.0",
+        "drupal/media_file_delete": "1.3.0",
+        "drupal/media_library_form_element": "2.0.6",
+        "drupal/menu_block": "1.10.0",
+        "drupal/menu_firstchild": "2.1.0",
+        "drupal/metatag": "2.0.0",
+        "drupal/migrate_plus": "6.0.2",
+        "drupal/migrate_tools": "6.0.4",
+        "drupal/pantheon_advanced_page_cache": "2.2.0",
+        "drupal/paragraphs": "1.17.0",
+        "drupal/pathauto": "1.12.0",
+        "drupal/redirect": "1.9.0",
+        "drupal/responsive_preview": "2.1.1",
+        "drupal/scheduler": "2.0.1",
+        "drupal/shortcode": "2.0.2",
+        "drupal/simple_sitemap": "4.1.9",
+        "drupal/simplesamlphp_auth": "4.0.0",
+        "drupal/smtp": "1.2.0",
+        "drupal/twig_tweak": "3.3.0",
+        "drupal/webform": "6.2.2",
+        "drush/drush": "12.5.1",
         "jquery/inputmask": "*",
         "jquery/intl-tel-input": "*",
         "jquery/rateit": "*",
         "jquery/select2": "*",
         "jquery/textcounter": "*",
         "jquery/timepicker": "*",
-        "pantheon-systems/drupal-integrations": "^10",
-        "pantheon-systems/upstream-management": "^1.0",
+        "pantheon-systems/drupal-integrations": "10.0.1",
+        "pantheon-systems/upstream-management": "1.0.1",
         "popperjs/popperjs": "*",
         "progress-tracker/progress-tracker": "*",
         "signature_pad/signature_pad": "*",
-        "simplesamlphp/simplesamlphp": "^2.1",
+        "simplesamlphp/simplesamlphp": "v2.2.1",
         "tabby/tabby": "*",
         "tippyjs/tippyjs": "*",
-        "drupal/config_update": "^2.0@alpha"
+        "drupal/config_update": "2.0.0-alpha3",
+        "asm89/stack-cors": "v2.2.0",
+        "chi-teck/drupal-code-generator": "3.4.0",
+        "composer/semver": "3.4.0",
+        "consolidation/annotated-command": "4.10.0",
+        "consolidation/config": "2.1.2",
+        "consolidation/filter-via-dot-access-data": "2.0.2",
+        "consolidation/log": "3.1.0",
+        "consolidation/output-formatters": "4.5.0",
+        "consolidation/robo": "4.0.6",
+        "consolidation/self-update": "2.2.0",
+        "consolidation/site-alias": "4.1.0",
+        "consolidation/site-process": "5.4.0",
+        "dflydev/dot-access-data": "v3.0.2",
+        "doctrine/annotations": "1.14.3",
+        "doctrine/common": "3.4.3",
+        "doctrine/deprecations": "1.1.3",
+        "doctrine/event-manager": "2.0.0",
+        "doctrine/lexer": "2.1.1",
+        "doctrine/persistence": "3.3.2",
+        "drupal/consumers": "1.17.0",
+        "drupal/core": "10.2.5",
+        "drupal/crop": "2.3.0",
+        "drupal/ctools": "4.0.4",
+        "drupal/embed": "1.7.0",
+        "drupal/entity_reference_revisions": "1.11.0",
+        "drupal/jsonapi_extras": "3.24.0",
+        "drupal/token": "1.13.0",
+        "e0ipso/shaper": "1.2.4",
+        "egulias/email-validator": "4.0.2",
+        "gettext/gettext": "v5.7.0",
+        "gettext/languages": "2.10.0",
+        "gettext/translator": "v1.2.0",
+        "grasmash/expander": "3.0.0",
+        "grasmash/yaml-cli": "3.1.0",
+        "guzzlehttp/guzzle": "7.8.1",
+        "guzzlehttp/promises": "2.0.2",
+        "guzzlehttp/psr7": "2.6.2",
+        "justinrainbow/json-schema": "v5.2.13",
+        "laminas/laminas-escaper": "2.13.0",
+        "laminas/laminas-feed": "2.22.0",
+        "laminas/laminas-stdlib": "3.19.0",
+        "league/container": "4.2.2",
+        "masterminds/html5": "2.8.1",
+        "mck89/peast": "v1.15.4",
+        "nikic/php-parser": "v5.0.2",
+        "pear/archive_tar": "1.4.14",
+        "pear/console_getopt": "v1.4.3",
+        "pear/pear-core-minimal": "v1.10.15",
+        "pear/pear_exception": "v1.0.2",
+        "phootwork/collection": "v3.2.2",
+        "phootwork/lang": "v3.2.2",
+        "phpmailer/phpmailer": "v6.9.1",
+        "phpowermove/docblock": "v4.0",
+        "psr/cache": "3.0.0",
+        "psr/container": "2.0.2",
+        "psr/event-dispatcher": "1.0.0",
+        "psr/http-client": "1.0.3",
+        "psr/http-factory": "1.0.2",
+        "psr/http-message": "2.0",
+        "psr/log": "3.0.0",
+        "psy/psysh": "v0.12.3",
+        "ralouphie/getallheaders": "3.0.3",
+        "robrichards/xmlseclibs": "3.1.1",
+        "sebastian/diff": "4.0.6",
+        "simplesamlphp/assert": "v1.1.1",
+        "simplesamlphp/composer-module-installer": "v1.3.4",
+        "simplesamlphp/saml2": "v4.6.11",
+        "simplesamlphp/simplesamlphp-assets-base": "v2.1.13",
+        "symfony/cache": "v6.4.6",
+        "symfony/cache-contracts": "v3.4.2",
+        "symfony/config": "v6.4.6",
+        "symfony/console": "v6.4.6",
+        "symfony/dependency-injection": "v6.4.6",
+        "symfony/deprecation-contracts": "v3.4.0",
+        "symfony/error-handler": "v6.4.6",
+        "symfony/event-dispatcher": "v6.4.3",
+        "symfony/event-dispatcher-contracts": "v3.4.2",
+        "symfony/filesystem": "v6.4.6",
+        "symfony/finder": "v6.4.0",
+        "symfony/framework-bundle": "v6.4.6",
+        "symfony/http-foundation": "v6.4.4",
+        "symfony/http-kernel": "v6.4.6",
+        "symfony/intl": "v6.4.3",
+        "symfony/mailer": "v6.4.6",
+        "symfony/mime": "v6.4.6",
+        "symfony/polyfill-ctype": "v1.28.0",
+        "symfony/polyfill-iconv": "v1.28.0",
+        "symfony/polyfill-intl-grapheme": "v1.28.0",
+        "symfony/polyfill-intl-icu": "v1.29.0",
+        "symfony/polyfill-intl-idn": "v1.28.0",
+        "symfony/polyfill-intl-normalizer": "v1.28.0",
+        "symfony/polyfill-mbstring": "v1.28.0",
+        "symfony/polyfill-php72": "v1.29.0",
+        "symfony/polyfill-php80": "v1.29.0",
+        "symfony/polyfill-php81": "v1.29.0",
+        "symfony/polyfill-php83": "v1.28.0",
+        "symfony/process": "v6.4.4",
+        "symfony/psr-http-message-bridge": "v6.4.6",
+        "symfony/routing": "v6.4.6",
+        "symfony/serializer": "v6.4.6",
+        "symfony/service-contracts": "v3.4.2",
+        "symfony/string": "v6.4.4",
+        "symfony/translation-contracts": "v3.4.2",
+        "symfony/twig-bridge": "v6.4.6",
+        "symfony/validator": "v6.4.6",
+        "symfony/var-dumper": "v6.4.6",
+        "symfony/var-exporter": "v6.4.6",
+        "symfony/yaml": "v6.4.3",
+        "twig/intl-extra": "v3.8.0",
+        "twig/twig": "v3.8.0",
+        "webflo/drupal-finder": "1.2.2",
+        "webmozart/assert": "1.11.0"
     },
+    "version": "1.0.1",
     "config": {
         "allow-plugins": {
             "composer/installers": true,
